Added issue1 branch

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,17 +4,17 @@ LFLAGS = -Wall -lpthread -lglut
 
 build_all: all
 
-include Audio/makefile
-include Content/makefile
+#include Audio/makefile
+#include Content/makefile
 include Core/makefile
-include Graphics/makefile
-include IO/makefile
-include Math/makefile
-include Networking/makefile
-include Physics/makefile
-include Scene/makefile
-include Scripting/makefile
-include Threading/makefile
+#include Graphics/makefile
+#include IO/makefile
+#include Math/makefile
+#include Networking/makefile
+#include Physics/makefile
+#include Scene/makefile
+#include Scripting/makefile
+#include Threading/makefile
 
 ALL_OBJECTS = $(AUDIO_OBJECTS) $(CONTENT_OBJECTS) $(CORE_OBJECTS) $(GRAPHICS_OBJECTS) $(IO_OBJECTS) $(MATH_OBJECTS) $(NETWORKING_OBJECTS) $(PHYSICS_OBJECTS) $(SCENE_OBJECTS) $(SCRIPTING_OBJECTS) $(THREADING_OBJECTS)
 
