--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,28 @@
 CC = g++
-CFLAGS = -Wall -c
-LFLAGS = -Wall -lpthread -lglut
+CFLAGS = -c
+LFLAGS = -lpthread -lglut
 
 build_all: all
 
-include Audio/makefile
-include Content/makefile
-include Core/makefile
-include Graphics/makefile
+# Uncomment each as they become available
+#include Audio/makefile
+#include Content/makefile
+#include Core/makefile
+#include Graphics/makefile
 include IO/makefile
 include Math/makefile
-include Networking/makefile
-include Physics/makefile
-include Scene/makefile
-include Scripting/makefile
-include Threading/makefile
+#include Networking/makefile
+#include Physics/makefile
+#include Scene/makefile
+#include Scripting/makefile
+#include Threading/makefile
 
-ALL_OBJECTS = $(AUDIO_OBJECTS) $(CONTENT_OBJECTS) $(CORE_OBJECTS) $(GRAPHICS_OBJECTS) $(IO_OBJECTS) $(MATH_OBJECTS) $(NETWORKING_OBJECTS) $(PHYSICS_OBJECTS) $(SCENE_OBJECTS) $(SCRIPTING_OBJECTS) $(THREADING_OBJECTS)
 
-all: audio content core graphics io math networking physics scene scripting
+ALL_OBJECTS = $(IO_OBJECTS) $(MATH_OBJECTS)
+# $(AUDIO_OBJECTS) $(CONTENT_OBJECTS) $(CORE_OBJECTS) $(GRAPHICS_OBJECTS) $(IO_OBJECTS) $(MATH_OBJECTS) $(NETWORKING_OBJECTS) $(PHYSICS_OBJECTS) $(SCENE_OBJECTS) $(SCRIPTING_OBJECTS) $(THREADING_OBJECTS)
+
+# audio content core graphics io math networking physics scene scripting
+all: IO Math
 	$(CC) main.cpp $(LFLAGS) $(ALL_OBJECTS) -o ../bin/tekstorm
 
 clean:
